Added type of phamacy